--- a/prepare_caffe_and_dictionary_flickr8k.ipynb
+++ b/prepare_caffe_and_dictionary_flickr8k.ipynb
@@ -17,15 +17,14 @@
    "source": [
     "# Setup \n",
     "\n",
-    "originalImagesPath = 'data/flickr8k/originalImages'\n",
-    "preprocessedImagesPath = 'data/flickr8k/processedImages/'\n",
+    "dataPath               = 'data/flickr8k/'\n",
+    "originalImagesPath     = dataPath + 'originalImages/'\n",
+    "preprocessedImagesPath = dataPath + 'processedImages/'\n",
     "\n",
-    "caffe_root = '/home/intuinno/codegit/caffe/'\n",
+    "caffe_root = '~/caffe/'\n",
     "\n",
     "vgg_ilsvrc_19_layoutFileName = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers_deploy.prototxt'\n",
-    "vgg_ilsvrc_19_modelFileName = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers.caffemodel'\n",
-    "\n",
-    "dataPath = 'data/flickr8k/'\n",
+    "vgg_ilsvrc_19_modelFileName  = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers.caffemodel'\n",
     "\n",
     "annotation_path = dataPath + 'Flickr8k.token.txt'"
    ]
@@ -83,9 +82,9 @@
     "# input preprocessing: 'data' is the name of the input blob == net.inputs[0]\n",
     "transformer = caffe.io.Transformer({'data': net.blobs['data'].data.shape})\n",
     "transformer.set_transpose('data', (2,0,1))\n",
-    "# transformer.set_mean('data', np.load(caffe_root + 'python/caffe/imagenet/ilsvrc_2012_mean.npy').mean(1).mean(1)) # mean pixel\n",
-    "# transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
-    "# transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB"
+    "transformer.set_mean('data', np.load(caffe_root + 'python/caffe/imagenet/pilsvrc_2012_mean.npy').mean(1).mean(1)) # mean pixel\n",
+    "transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
+    "transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB"
    ]
   },
   {
@@ -136,7 +135,7 @@
     "        net.blobs['data'].data[...] = transformer.preprocess('data', caffe.io.load_image( preprocessedImagesPath +  fn))\n",
     "        out = net.forward()\n",
     "        feat = net.blobs['conv5_4'].data[0]\n",
-    "    #     print feat.shape\n",
+    "        print feat.shape\n",
     "#         pdb.set_trace()\n",
     "        reshapeFeat = np.swapaxes(feat, 0,2)\n",
     "        reshapeFeat2 = np.reshape(reshapeFeat,(1,-1))\n",
@@ -277,7 +276,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "wordsDict['A']"
+   ]
   }
  ],
  "metadata": {
@@ -299,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   },
   "priority": 1
  },
