Add the data generation.

--- a/prepare_caffe_and_dictionary_flickr8k.ipynb
+++ b/prepare_caffe_and_dictionary_flickr8k.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -20,8 +20,9 @@
     "dataPath               = 'data/flickr8k/'\n",
     "originalImagesPath     = dataPath + 'originalImages/'\n",
     "preprocessedImagesPath = dataPath + 'processedImages/'\n",
+    "imagesPath = '../data/Flicker8k_Dataset/'\n",
     "\n",
-    "caffe_root = '~/caffe/'\n",
+    "caffe_root = '/Users/Grendel/caffe/'\n",
     "\n",
     "vgg_ilsvrc_19_layoutFileName = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers_deploy.prototxt'\n",
     "vgg_ilsvrc_19_modelFileName  = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers.caffemodel'\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -66,47 +67,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "caffe.set_device(0)\n",
+    "# caffe.set_device(0)\n",
     "caffe.set_mode_gpu()\n",
     "\n",
+    "# net = caffe.Net(vgg_ilsvrc_19_layoutFileName,\n",
+    "#                 vgg_ilsvrc_19_modelFileName,\n",
+    "#                 caffe.TEST)\n",
+    "\n",
+    "# # input preprocessing: 'data' is the name of the input blob == net.inputs[0]\n",
+    "# transformer = caffe.io.Transformer({'data': net.blobs['data'].data.shape})\n",
+    "# transformer.set_transpose('data', (2,0,1))\n",
+    "# transformer.set_mean('data', np.load(caffe_root + 'python/caffe/imagenet/pilsvrc_2012_mean.npy').mean(1).mean(1)) # mean pixel\n",
+    "# transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
+    "# transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB\n",
+    "\n",
+    "caffe.set_mode_gpu()\n",
     "net = caffe.Net(vgg_ilsvrc_19_layoutFileName,\n",
     "                vgg_ilsvrc_19_modelFileName,\n",
     "                caffe.TEST)\n",
     "\n",
-    "# input preprocessing: 'data' is the name of the input blob == net.inputs[0]\n",
-    "transformer = caffe.io.Transformer({'data': net.blobs['data'].data.shape})\n",
+    "transformer = caffe.io.Transformer({'data':net.blobs['data'].data.shape})\n",
     "transformer.set_transpose('data', (2,0,1))\n",
-    "transformer.set_mean('data', np.load(caffe_root + 'python/caffe/imagenet/pilsvrc_2012_mean.npy').mean(1).mean(1)) # mean pixel\n",
-    "transformer.set_raw_scale('data', 255)  # the reference model operates on images in [0,255] range instead of [0,1]\n",
-    "transformer.set_channel_swap('data', (2,1,0))  # the reference model has channels in BGR order instead of RGB"
+    "transformer.set_mean('data', np.load(caffe_root + 'python/caffe/imagenet/ilsvrc_2012_mean.npy').mean(1).mean(1))\n",
+    "transformer.set_raw_scale('data', 255)\n",
+    "transformer.set_channel_swap('data', (2,1,0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dev\n",
-      "1000(1000, 100352)\n",
-      "test\n",
-      "1000(1000, 100352)\n",
-      "train\n",
-      "6000(6000, 100352)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set net to batch size of 50\n",
     "# net.blobs['data'].reshape(5,3,224,224)\n",
@@ -115,9 +114,6 @@
     "\n",
     "# files = ['test', 'train', 'dev']\n",
     "files = [ 'dev','test','train']\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "for fname in files:\n",
     "    print fname \n",
@@ -132,7 +128,7 @@
     "\n",
     "    for i in range(numImage):\n",
     "        fn = imageList[i].rstrip()\n",
-    "        net.blobs['data'].data[...] = transformer.preprocess('data', caffe.io.load_image( preprocessedImagesPath +  fn))\n",
+    "        net.blobs['data'].data[...] = transformer.preprocess('data', caffe.io.load_image( imagesPath +  fn))\n",
     "        out = net.forward()\n",
     "        feat = net.blobs['conv5_4'].data[0]\n",
     "        print feat.shape\n",
@@ -227,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +256,7 @@
        "14"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,14 +267,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordsDict['A']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "wordsDict['A']"
-   ]
+   "source": []
   }
  ],
  "metadata": {
