--- a/notebook/prepare_caffe_and_dictionary_coco.ipynb
+++ b/notebook/prepare_caffe_and_dictionary_coco.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -18,16 +18,17 @@
     "# Setup \n",
     "import os\n",
     "CWD = os.getcwd() + \"/\"\n",
-    "originalImagesPath     = CWD + '../data/coco/originalImages'\n",
-    "preprocessedImagesPath = CWD + '../data/coco/processedImages/'\n",
+    "originalImagesPath     = CWD + '../../data/coco/originalImages'\n",
+    "preprocessedImagesPath = CWD + '../../data/coco/processedImages/'\n",
     "\n",
     "caffe_root = '/Users/Grendel/caffe/'\n",
     "\n",
     "vgg_ilsvrc_19_layoutFileName = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers_deploy.prototxt'\n",
     "vgg_ilsvrc_19_modelFileName  = caffe_root + 'models/vgg_ilsvrc_19/VGG_ILSVRC_19_layers.caffemodel'\n",
     "\n",
-    "dataPath        = CWD + '../data/coco/'\n",
-    "annotation_path = dataPath + 'annotations/captions_train2014.json'\n",
+    "dataPath        = CWD + '../../data/coco/'\n",
+    "annotation_path = dataPath + 'annotations/'\n",
+    "annotation_tr   = annotation_path + 'captions_train2014.json'\n",
     "splitFileName   = dataPath + 'dataset_coco.json'\n",
     "\n",
     "tr_data_path    = dataPath + 'train2014/'\n",
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +108,7 @@
        "'\\nUse:\\n    ls <your directory> > <the file you want to save to>\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,32 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-c98ee0e9d563>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Let's make dictionary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcorpus\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'captions'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mcorpus2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcorpus\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mcorpus3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Let's build dictionary\n",
+    "# Build dictionary\n",
+    "# corpus = df['captions'].values\n",
+    "# corpus2 = [' '.join(c) for c in corpus]\n",
+    "# corpus3 = ' '.join(corpus2)\n",
     "\n",
-    "# Let's make dictionary\n",
-    "\n",
-    "corpus = df['captions'].values\n",
-    "corpus2 = [' '.join(c) for c in corpus]\n",
-    "corpus3 = ' '.join(corpus2)\n",
-    "\n",
+    "# Make the dictionary form the captisonw\n",
+    "import json\n",
+    "with open(annotation_tr,'r') as f:\n",
+    "    caps_notes = json.load(f)\n",
+    "    corpus3 = ' '.join([note['caption'] for note in caps_notes['annotations']])\n",
     "words = nltk.FreqDist(corpus3.split()).most_common()\n",
     "\n",
     "wordsDict = {words[i][0]:i+2 for i in range(len(words))}\n",
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -201,19 +192,19 @@
     {
      "data": {
       "text/plain": [
-       "[(u'a', 660420),\n",
-       " (u'A', 359312),\n",
-       " (u'on', 221008),\n",
-       " (u'of', 211224),\n",
-       " (u'in', 189904),\n",
-       " (u'the', 177513),\n",
-       " (u'with', 160057),\n",
-       " (u'and', 145571),\n",
-       " (u'is', 100190),\n",
-       " (u'man', 71303)]"
+       "[(u'a', 443447),\n",
+       " (u'A', 241099),\n",
+       " (u'on', 148118),\n",
+       " (u'of', 141775),\n",
+       " (u'in', 127752),\n",
+       " (u'the', 118869),\n",
+       " (u'with', 106930),\n",
+       " (u'and', 98049),\n",
+       " (u'is', 67163),\n",
+       " (u'man', 48108)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,60 +215,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dev\n",
-      "5000(5000, 100352)\n",
-      "test\n",
-      "5000(5000, 100352)\n",
-      "train\n",
-      "82783(82783, 100352)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'coco_feature' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-9812ddc91edd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mfname\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'train'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m         \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msavez\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataPath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mcoco_feature\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mexperimentPrefix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresultSave32\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindices\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresultSave32\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindptr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresultSave32\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindptr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresultSave\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mfileName\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataPath\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'coco_feature.'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mexperimentPrefix\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.pkl'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'coco_feature' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# set net to batch size of 50\n",
     "# net.blobs['data'].reshape(10,3,224,224)\n",
     "\n",
-    "files = [ 'dev','test','train']\n",
+    "files = [ 'val','test','train']\n",
     "\n",
     "for fname in files:\n",
     "    print fname \n",
-    "    f = open(dataPath + 'coco.' + fname + 'Images.txt')\n",
+    "    f = open(dataPath + \"annotations/\" + 'coco.' + fname + 'Images.txt')\n",
     "    counter = 0\n",
     "    \n",
     "    imageList = [i for i in f]\n",
     "    numImage = len(imageList)\n",
-    "#     pdb.set_trace()\n",
     "    \n",
     "    result = np.empty((numImage, 100352))\n",
     "\n",
     "    for i in range(numImage):\n",
     "        fn = imageList[i].rstrip()\n",
-    "        net.blobs['data'].data[...] = transformer.preprocess('data', caffe.io.load_image( preprocessedImagesPath +  fn))\n",
+    "        net.blobs['data'].data[...] = transformer.preprocess('data', caffe.io.load_image( dataPath + fname + \"2014/\" +  fn))\n",
     "        out = net.forward()\n",
     "        feat = net.blobs['conv5_4'].data[0]\n",
-    "#         import pdb; pdb.set_trace()\n",
-    "    #     print feat.shape\n",
-    "#         pdb.set_trace()\n",
     "        reshapeFeat = np.swapaxes(feat, 0,2)\n",
     "        reshapeFeat2 = np.reshape(reshapeFeat,(1,-1))\n",
     "        \n",
