Use reindexing to generate coco data.

--- a/notebook/prepare_caffe_and_dictionary_coco.ipynb
+++ b/notebook/prepare_caffe_and_dictionary_coco.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +108,7 @@
        "'\\nUse:\\n    ls <your directory> > <the file you want to save to>\\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,33 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Build dictionary\n",
-    "# corpus = df['captions'].values\n",
-    "# corpus2 = [' '.join(c) for c in corpus]\n",
-    "# corpus3 = ' '.join(corpus2)\n",
-    "\n",
-    "# Make the dictionary form the captisonw\n",
-    "import json\n",
-    "with open(annotation_tr,'r') as f:\n",
-    "    caps_notes = json.load(f)\n",
-    "    corpus3 = ' '.join([note['caption'] for note in caps_notes['annotations']])\n",
-    "words = nltk.FreqDist(corpus3.split()).most_common()\n",
-    "\n",
-    "wordsDict = {words[i][0]:i+2 for i in range(len(words))}\n",
-    "\n",
-    "with open(dataPath + 'dictionary.pkl', 'wb') as f:\n",
-    "    pickle.dump(wordsDict, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -204,13 +178,107 @@
        " (u'man', 48108)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Build dictionary\n",
+    "# corpus = df['captions'].values\n",
+    "# corpus2 = [' '.join(c) for c in corpus]\n",
+    "# corpus3 = ' '.join(corpus2)\n",
+    "\n",
+    "# Make the dictionary form the captisonw\n",
+    "import json\n",
+    "with open(annotation_tr,'r') as f:\n",
+    "    caps_notes = json.load(f)\n",
+    "    corpus3 = ' '.join([note['caption'] for note in caps_notes['annotations']])\n",
+    "words = nltk.FreqDist(corpus3.split()).most_common()\n",
+    "\n",
+    "wordsDict = {words[i][0]:i+2 for i in range(len(words))}\n",
+    "\n",
+    "with open(dataPath + 'dictionary.pkl', 'wb') as f:\n",
+    "    pickle.dump(wordsDict, f)\n",
+    "\n",
     "words[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from annotations...\n",
+      "Generating images data...\n",
+      "Generating captions data...\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-bd850c1594c4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Generating captions data...\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mcap_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'caption'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimages_train_idx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'image_id'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mnote\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcaps_notes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'annotations'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Finished generating data...\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# Select training images and captions\n",
+    "import json\n",
+    "with open(annotation_tr,'r') as f:\n",
+    "    stdout.write(\"Loading data from annotations...\\n\")\n",
+    "    caps_notes = json.load(f)\n",
+    "\n",
+    "    stdout.write(\"Generating images data...\\n\")\n",
+    "    images_train     = []\n",
+    "    images_train_idx = []\n",
+    "    for info in caps_notes['images']:\n",
+    "        images_train.append(info['file_name'])\n",
+    "        images_train_idx.append(info['id'])\n",
+    "\n",
+    "    stdout.write(\"Generating captions data...\\n\")\n",
+    "    cap_train = [(note['caption'], images_train_idx.index(note['image_id'])) for note in caps_notes['annotations']]\n",
+    "\n",
+    "    stdout.write(\"Finished generating data...\\n\")\n",
+    "\n",
+    "# # Reindex the training images\n",
+    "# images_train.index = xrange(TRAIN_SIZE)\n",
+    "# image_id_dict_train = pd.Series(np.array(images_train.index), index=images_train)\n",
+    "# # Create list of image ids corresponding to each caption\n",
+    "# caption_image_id_train = [image_id_dict_train[img] for img in images_train for i in xrange(5)]\n",
+    "# # Create tuples of caption and image id\n",
+    "# cap_train = zip(captions_train, caption_image_id_train)\n",
+    "\n",
+    "stdout.write(\"Start extracting features...\\n\")\n",
+    "for start, end in zip(range(0, len(images_train)+100, 100), range(100, len(images_train)+100, 100)):\n",
+    "#     image_files = images_train[start:end]\n",
+    "    image_files = images_train[start:end]\n",
+    "    feat = cnn.get_features(image_list=image_files, layers='conv5_3', layer_sizes=[512,14,14])\n",
+    "    if start == 0:\n",
+    "        feat_flatten_list_train = scipy.sparse.csr_matrix(np.array(map(lambda x: x.flatten(), feat)))\n",
+    "    else:\n",
+    "        feat_flatten_list_train = scipy.sparse.vstack([feat_flatten_list_train, scipy.sparse.csr_matrix(np.array(map(lambda x: x.flatten(), feat)))])\n",
+    "    stdout.write(\"processing images %d to %d\\n\" % (start, end))\n",
+    "    stdout.flush()\n",
+    "\n",
+    "print \"Saving indices information: i -> image_id \\n\"\n",
+    "with open('../data/coco/coco_align.train.indices.pkl', 'wb') as f:\n",
+    "    cPickle.dump(images_train_idx, f)\n",
+    "    \n",
+    "print \"Saving features... \\n\"\n",
+    "with open('../data/coco/coco_align.train.pkl', 'wb') as f:\n",
+    "    cPickle.dump(cap_train, f,-1)\n",
+    "    cPickle.dump(feat_flatten_list_train, f)\n"
    ]
   },
   {
@@ -219,7 +287,17 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "val\n",
+      "40504\n",
+      "24"
+     ]
+    }
+   ],
    "source": [
     "# set net to batch size of 50\n",
     "# net.blobs['data'].reshape(10,3,224,224)\n",
@@ -233,6 +311,7 @@
     "    \n",
     "    imageList = [i for i in f]\n",
     "    numImage = len(imageList)\n",
+    "    print numImage\n",
     "    \n",
     "    result = np.empty((numImage, 100352))\n",
     "\n",
