More statistiacl analysis.

--- a/notebook/coco_coexistance_analysis.ipynb
+++ b/notebook/coco_coexistance_analysis.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -48,16 +48,23 @@
     {
      "data": {
       "text/plain": [
-       "'A traffic light hanging from the side of a pole. A stop sign and three street signs attached to a pole. A picture of street signs and lamp carve out the building across the streets structural details . The traffic and street signs are in clear view. Street signs at the corner of Broadway and Wall in NYC '"
+       "{u'coco_url': u'http://mscoco.org/images/8006',\n",
+       " u'date_captured': u'2013-11-16 14:08:08',\n",
+       " u'file_name': u'COCO_train2014_000000008006.jpg',\n",
+       " u'flickr_url': u'http://farm2.staticflickr.com/1266/729903566_769951485f_z.jpg',\n",
+       " u'height': 480,\n",
+       " u'id': 8006,\n",
+       " u'license': 5,\n",
+       " u'width': 640}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img_captions['8006']['captions']"
+    "img_captions['8006']['image']"
    ]
   },
   {
@@ -72,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "0:00:02.879961\n",
+      "0:00:03.493515\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -118,7 +125,7 @@
       "Captions is :\n",
       "SEVERAL MEN PLAYING BASEBALL ON AN OPEN FIELD. THE BOY IS IN BATTING STANCE TO WAITING. A BASEBALL PLAYER TAKES A HIGH GRIP ON THE BAT AS A CATCHER SCRAMBLES FOR THE BALL. A BASEBALL GAME IN ACTION WITH A MAN AT THE PLATE WITH A BAT. A BASEBALL PLAYER HOLDING A BAT ON A FIELD. \n",
       "\n",
-      "set(['', 'BOY', 'BAT', 'SCRAMBLES', 'GAME', 'BALL', 'BASEBALL', 'HOLDING', 'SEVERAL', 'OPEN', 'PLAYING', 'FOR', 'WITH', '.', 'TO', 'ACTION', 'GRIP', 'BATTING', 'A', 'CATCHER', 'TAKES', 'STANCE', 'PLATE', 'IS', 'AN', 'HIGH', 'FIELD', 'WAITING', 'AT', 'IN', 'THE', 'ON', 'PLAYER', 'MEN', 'AS', 'MAN', None])\n",
+      "set(['', 'BOY', 'BAT', 'SCRAMBLES', 'GAME', 'BALL', 'BASEBALL', 'HOLDING', 'SEVERAL', 'OPEN', 'PLAYING', 'FOR', 'WITH', '.', 'TO', 'ACTION', 'GRIP', 'BATTING', 'A', 'CATCHER', None, 'TAKES', 'STANCE', 'PLATE', 'IS', 'AN', 'HIGH', 'FIELD', 'WAITING', 'AT', 'IN', 'THE', 'ON', 'PLAYER', 'MEN', 'AS', 'MAN'])\n",
       "\n",
       "set([u'GV'])\n",
       "0.0\n"
@@ -172,67 +179,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'count': 2, 'rate': 0.6666666666666666, 'text_count': 3}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
-    "coexists = []\n",
-    "for img_id in img_captions.keys():\n",
-    "    cap = img_captions[img_id]['captions'].upper()\n",
-    "    cap_words = set(re.split('([,.])*\\s', cap))\n",
+    "def exclude_small_text(anns, img_id, threshold=0.1):\n",
+    "    \"\"\"filter out the text annotations with a bounding box smaller than [threshold]*img_area\"\"\"\n",
+    "    img_info = img_captions[img_id]['image']\n",
+    "    h,w = img_info['height'], img_info['width']\n",
+    "    return filter(lambda ann: ann['area']>=h*w*threshold, anns)\n",
     "\n",
-    "    texts = ct.loadAnns(ct.getAnnIds(imgIds=int(img_id)))\n",
-    "    if len(texts) == 0:\n",
-    "        continue\n",
+    "def exclude_corner_text(anns, img_id, threshold=0.1):\n",
+    "    \"\"\"filter out the text annotations on sides and corners\"\"\"\n",
+    "    img_info = img_captions[img_id]['image']\n",
+    "    h,w = img_info['height'], img_info['width']\n",
+    "    def _judge(ann):\n",
+    "        [x,y,bw,bh]=ann['bbox']\n",
+    "        return  x>=threshold*w and \\\n",
+    "                x+bw<=(1-threshold)*w and \\\n",
+    "                y+bh<=(1-threshold)*h and \\\n",
+    "                y>=threshold*h\n",
+    "    return filter(_judge, anns)\n",
+    "        \n",
+    "def calculate_population_coexist_stat(flags={}):\n",
+    "    \"\"\"flag: \n",
+    "    [] -- all captions\n",
+    "    size: n -- excluding small bboxes with size less than n\"\"\"\n",
+    "    coexists = []\n",
     "\n",
-    "    text_words = set()\n",
-    "    coexist_count = 0\n",
-    "    for text in texts:\n",
-    "        if not 'utf8_string' in text:\n",
+    "    for img_id in img_captions.keys():\n",
+    "        cap = img_captions[img_id]['captions'].upper()\n",
+    "        cap_words = set(re.split('([,.])*\\s', cap))\n",
+    "\n",
+    "        texts = ct.loadAnns(ct.getAnnIds(imgIds=int(img_id)))\n",
+    "        \n",
+    "        #filtering\n",
+    "        if 'size' in flags:\n",
+    "            texts = exclude_small_text(texts, img_id , threshold=flags['size'])\n",
+    "        if 'corner' in flags:\n",
+    "            texts = exclude_corner_text(texts, img_id, threshold=flags['corner'])\n",
+    "        \n",
+    "        if len(texts) == 0:\n",
     "            continue\n",
-    "        words = text['utf8_string'].upper().split(' ')\n",
-    "        for word in words:\n",
-    "            if word in text_words:\n",
+    "\n",
+    "        text_words = set()\n",
+    "        coexist_count = 0\n",
+    "        for text in texts:\n",
+    "            if not 'utf8_string' in text:\n",
     "                continue\n",
-    "            else:\n",
-    "                text_words.add(word)\n",
+    "            words = text['utf8_string'].upper().split(' ')\n",
+    "            for word in words:\n",
+    "                if word in text_words:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    text_words.add(word)\n",
     "\n",
-    "            if word in cap_words:\n",
-    "                coexist_count = coexist_count + 1\n",
+    "                if word in cap_words:\n",
+    "                    coexist_count = coexist_count + 1\n",
     "\n",
-    "    if len(text_words) == 0:\n",
-    "        continue\n",
+    "        if len(text_words) == 0:\n",
+    "            continue\n",
     "\n",
-    "    img_captions[img_id]['coexistence_data'] = {\n",
-    "        'count'      : coexist_count,\n",
-    "        'text_count' : len(text_words),\n",
-    "        'rate'       : coexist_count/float(len(text_words))\n",
-    "    }\n",
-    "    \n",
-    "    coexists.append((coexist_count, len(text_words),coexist_count/float(len(text_words))))\n",
+    "        img_captions[img_id]['coexistence_data'] = {\n",
+    "            'count'      : coexist_count,\n",
+    "            'text_count' : len(text_words),\n",
+    "            'rate'       : coexist_count/float(len(text_words))\n",
+    "        }\n",
     "\n",
-    "# len(coexists)\n",
-    "img_captions['8006']['coexistence_data']"
+    "        coexists.append((coexist_count, len(text_words),coexist_count/float(len(text_words)), img_id))\n",
+    "    return coexists\n",
+    "\n",
+    "#coexists_large = calculate_population_coexist_stat({'size':0.05})\n",
+    "coexists_center = calculate_population_coexist_stat({'corner':0.25})\n",
+    "#coexists_all = calculate_population_coexist_stat()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -241,46 +269,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Dataset has size:10594\n",
       "Getting the 0 data stat:\n",
       "\n",
       "\n",
-      "Total:\t21536;\t\tMean:\t\t0.462714;\tNonezero:\t5783\n",
+      "Total:\t10594;\t\tMean:\t\t0.360204;\tNonezero:\t2567\n",
       "Median:\t0.000000;\tMedian(H):\t0.000000;\tMedian(L):\t0.000000;\n",
-      "Max:\t18.000000;\tMin:\t\t0.000000\n",
+      "Max:\t14.000000;\tMin:\t\t0.000000;\tStd:\t\t0.772624\n",
       "\n",
       "\n",
       "Getting the 1 data stat:\n",
       "\n",
       "\n",
-      "Total:\t21536;\t\tMean:\t\t4.224415;\tNonezero:\t21536\n",
-      "Median:\t3.000000;\tMedian(H):\t3.000000;\tMedian(L):\t3.000000;\n",
-      "Max:\t131.000000;\tMin:\t\t1.000000\n",
+      "Total:\t10594;\t\tMean:\t\t2.752690;\tNonezero:\t10594\n",
+      "Median:\t2.000000;\tMedian(H):\t2.000000;\tMedian(L):\t2.000000;\n",
+      "Max:\t67.000000;\tMin:\t\t1.000000;\tStd:\t\t3.027331\n",
       "\n",
       "\n",
       "Getting the 2 data stat:\n",
       "\n",
       "\n",
-      "Total:\t21536;\t\tMean:\t\t0.111039;\tNonezero:\t5783\n",
+      "Total:\t10594;\t\tMean:\t\t0.135520;\tNonezero:\t2567\n",
       "Median:\t0.000000;\tMedian(H):\t0.000000;\tMedian(L):\t0.000000;\n",
-      "Max:\t1.000000;\tMin:\t\t0.000000\n",
+      "Max:\t1.000000;\tMin:\t\t0.000000;\tStd:\t\t0.291835\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "import statistics\n",
     "\n",
     "def get_stat(data):\n",
     "    print \"\\n\"\n",
     "    print \"Total:\\t%d;\\t\\tMean:\\t\\t%f;\\tNonezero:\\t%d\"%(len(data), statistics.mean(data), len(filter(lambda x:x!=0, data)))\n",
     "    print \"Median:\\t%f;\\tMedian(H):\\t%f;\\tMedian(L):\\t%f;\"%(statistics.median(data), statistics.median_high(data), statistics.median_low(data))\n",
-    "    print \"Max:\\t%f;\\tMin:\\t\\t%f\"%(max(data), min(data))\n",
+    "    print \"Max:\\t%f;\\tMin:\\t\\t%f;\\tStd:\\t\\t%f\"%(max(data), min(data),statistics.stdev(data))\n",
     "    print \"\\n\"\n",
     "\n",
+    "dataset = coexists_center\n",
+    "print \"Dataset has size:%d\" % len(dataset)\n",
     "for i in [0,1,2]:\n",
     "    print \"Getting the %d data stat:\"%i\n",
-    "    get_stat(map(lambda x:x[i], coexists))\n"
+    "    get_stat(map(lambda x:x[i], dataset))\n"
    ]
   },
   {
@@ -289,19 +321,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/matplotlib/backend_bases.pyc\u001b[0m in \u001b[0;36mclose_event\u001b[0;34m(self, guiEvent)\u001b[0m\n\u001b[1;32m   1819\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mevent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1820\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1821\u001b[0;31m     \u001b[0;32mdef\u001b[0m \u001b[0mclose_event\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mguiEvent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1822\u001b[0m         \"\"\"\n\u001b[1;32m   1823\u001b[0m         \u001b[0mThis\u001b[0m \u001b[0mmethod\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0mcalled\u001b[0m \u001b[0mby\u001b[0m \u001b[0mall\u001b[0m \u001b[0mfunctions\u001b[0m \u001b[0mconnected\u001b[0m \u001b[0mto\u001b[0m \u001b[0mthe\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Demo of the histogram (hist) function with a few features.\n",
@@ -319,23 +339,28 @@
     "import matplotlib.mlab as mlab\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "num_bins = 20\n",
-    "# the histogram of the data\n",
-    "n, bins, patches = plt.hist(map(lambda x:x[2], coexists), num_bins, facecolor='green', alpha=0.5)\n",
     "\n",
-    "# add a 'best fit' line\n",
-    "plt.xlabel('Coexistence Rate')\n",
-    "plt.ylabel('Frequency')\n",
-    "plt.title('Coexistence Rate Distribution')\n",
+    "def plot(data,color):\n",
+    "    num_bins = 20\n",
+    "    # the histogram of the data\n",
+    "    n, bins, patches = plt.hist(map(lambda x:x[2], data), num_bins, normed= 1,  facecolor=color, alpha=0.5)\n",
     "\n",
-    "# Tweak spacing to prevent clipping of ylabel\n",
-    "plt.subplots_adjust(left=0.15)\n",
-    "plt.show()\n"
+    "    # add a 'best fit' line\n",
+    "    plt.xlabel('Coexistence Rate')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    plt.title('Coexistence Rate Distribution')\n",
+    "\n",
+    "    # Tweak spacing to prevent clipping of ylabel\n",
+    "    plt.subplots_adjust(left=0.15)\n",
+    "\n",
+    "plot(coexists_all, 'red')\n",
+    "plot(coexists_center, 'green')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -399,31 +424,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 0.0, '376385')\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{u'coco_url': u'http://mscoco.org/images/87219',\n",
-       " u'date_captured': u'2013-11-18 03:29:04',\n",
-       " u'file_name': u'COCO_train2014_000000087219.jpg',\n",
-       " u'flickr_url': u'http://farm6.staticflickr.com/5441/7396801392_be93a012b7_z.jpg',\n",
-       " u'height': 428,\n",
-       " u'id': 87219,\n",
-       " u'license': 3,\n",
-       " u'width': 640}"
+       "[{u'caption': u'A large crowd is watching a baseball game.',\n",
+       "  u'id': 587066,\n",
+       "  u'image_id': 376385},\n",
+       " {u'caption': u'Home plate at a professional baseball game, as everyone gets ready.',\n",
+       "  u'id': 588155,\n",
+       "  u'image_id': 376385},\n",
+       " {u'caption': u'A group of baseball players standing on top of a green field.',\n",
+       "  u'id': 588377,\n",
+       "  u'image_id': 376385},\n",
+       " {u'caption': u'the ump calling a strike the catcher throwing the ball back to the pitcher and the batter has a strike',\n",
+       "  u'id': 591974,\n",
+       "  u'image_id': 376385},\n",
+       " {u'caption': u'A baseball game in progress with the batter up to plate.',\n",
+       "  u'id': 592115,\n",
+       "  u'image_id': 376385}]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "high_rates_images[55]['image']"
+    "print coexists_center[0]\n",
+    "img_captions['376385']['annotation']"
    ]
   },
   {
@@ -452,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
